setup google script page for drop off, made clippy home

--- a/style.css
+++ b/style.css
@@ -6,13 +6,28 @@ body {
     text-decoration: none;
   }
   
- 
+ h1 {
+  font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1;
+ }
   .nav {
     display: flex;
     justify-content: center;
     margin-top: -0.5rem;
     
     
+  }
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  img {
+    height: 10rem;
+    margin-top: 4rem;
   }
   
   .invoice-box {
