configured home page look

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-right: 15rem;
   }
   img {
     height: 10rem;
