--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #b3bcff;
+  background-image: url(https://images.unsplash.com/photo-1568581357391-c71a1675ef93?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  background-size: cover;
     overflow-x: hidden;
   }  
   a {
@@ -12,6 +13,11 @@ body {
   font-weight: 600;
   line-height: 1;
  }
+.title-wrap {
+  background-color: rgb(254, 254, 254);
+  padding: 3px;
+  border-radius: 10px;
+}
   .nav {
     display: flex;
     justify-content: center;
@@ -46,9 +52,8 @@ body {
     
  
     border-radius: 30px;
-background: #8e95f5;
-box-shadow:  24px 24px 83px #696eb5,
-             -24px -24px 83px #b3bcff;
+background: rgba(174, 196, 165, 0.907);
+
     
   }
   .links {
@@ -343,3 +348,131 @@ box-shadow:  24px 24px 83px #696eb5,
       clear: both;
     width: 100%;
   }
+
+
+  /*for circle background*/
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -100;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 50px;
+  background-size: cover;
+  background-blend-mode:lighten;
+    backdrop-filter: blur(35px);
+  background-image: url(myface.png);
+  animation: animate 25s linear infinite;
+  bottom: -30rem;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 110px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 30px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 30px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 80px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 30px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 140px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 180px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 45px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 25px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 190px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+.circles li:nth-child(11){
+  left: 31%;
+  width: 10px;
+  height: 20px;
+  animation-delay: 0s;
+  animation-duration: 39s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 0.4;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1500px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
+}
